--- a/style.css
+++ b/style.css
@@ -15,26 +15,27 @@
     --lightLavender: hsl(241, 100%, 89%);
     --darkGrayBlue: hsl(224, 30%, 27%);
 }
-
+html,
 body{
+    margin: 0;
     font-size: 18px;
     font-family: 'Hanken Grotesk';
     display: flex;
-    background-color: white;
-    align-items: center;
-    justify-content: center;
-    height: 100vh;
-    margin: 0;
+    width: 100%;
+    height: 100%;
+
 }
 
 .wrapper{
+    margin: auto;
     flex-direction: column;
     border-radius: 25px;
     display: flex;
+    box-shadow: 0 6px 20px 0px rgba(0, 0, 0, 0.1);
 }
 
 .result-card{
-    
+ 
     text-align:center;
     padding: 25px 50px;
     display: flex;
@@ -170,9 +171,24 @@ button:hover{
 }
 
 
-@media screen and (min-width: 725px) {
+@media screen and (max-width: 725px) {
     .wrapper {
+        width: 100%;
+        flex-direction: column;
+    }
+    .list-container{
+        padding: 0 25px 0 0;
+    }
+    .list {
+        width: 100%;
+    }
+    .result-card {
+        border-radius: 0px 0px 25px 25px;
+    }
+}
+@media screen and (min-width: 726px) {
+    .wrapper {
+
         flex-direction: row;
-        box-shadow: 0 6px 20px 0px rgba(0, 0, 0, 0.1);
     }
 }
